--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,17 @@
-name: A workflow for my Hello World File
-
-on: push
+jobs:
+ 
+ build:
+ 
+   name:  Hello workd action
+   
+   runs-on: ubuntu-latest
+   
+   steps:
+   
+   - uses:  actions/checkout@v1
+   
+   - uses:  ./action-a
+   
+   with:
+   
+   MY_NAME:  "Mona"
